correction about img + add gap

--- a/css/style.css
+++ b/css/style.css
@@ -127,8 +127,13 @@ I define 2 break-points : Mobile > 48rem  > tablette
 }
 
 .main-img-container{
+  order : -1;
+  display : flex;
+  justify-content: center;
+
   padding-inline-start: calc(1rem * 6.33 / 2 );
   padding-inline-end: calc(1rem * 6.33 / 2 );
+  
 }
 
 @media screen and (min-width: 48em) {
@@ -175,6 +180,12 @@ I define 2 break-points : Mobile > 48rem  > tablette
   display: grid;
 }
 
+
+.list-projects{
+  display:grid;
+  gap:2.5rem;
+}
+
 .container-img-projet {
   order:-1;
 }
@@ -187,11 +198,21 @@ I define 2 break-points : Mobile > 48rem  > tablette
   .list-projects{
     display:grid;
     grid-template-columns: 1fr 1fr;
-    gap : 2.5rem;
+    gap : 3.75rem 1.12rem;
   }
 }
 
-@media screen and (min-width: 62em) {
+@media screen and (min-width: 55em) {
+  
+  .list-projects{
+    display:grid;
+    grid-template-columns: 1fr 1fr;
+    gap : 4.31rem 1.5rem; 
+  }
+}
+
+@media screen and (min-width: 61.99em) {
+
   .container-img-projet{
     grid-area: a ;
     /*background-color: yellow;*/
@@ -211,6 +232,7 @@ I define 2 break-points : Mobile > 48rem  > tablette
     grid-template-areas: "a"
                          "b";
   }
+
 }
 
 /********* CONTACT LAYOUT *********/
